# jikan

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/anime/: character_staff.rs  characters_staff.rs  episodes.rs  forum.rs  info.rs  mod.rs  more_info.rs  news.rs  pictures.rs  recommendations.rs  reviews.rs  stats.rs  test_helper.rs  user_updates.rs  videos.rs
src/anime/__test__/: characters_staff_4207.json  episodes_136_page_1.json  episodes_136_page_999.json  forum_136.json  info_136.json  more_info_136.json  news_20.json  news_4207.json  pictures_20.json  recommendations_136.json  recommendations_20.json  reviews_136_page_999.json  reviews_20_page_1.json  stats_4207.json  user_updates_136_page_999.json  videos_136.json  videos_20.json  videos_4207.json
src/character/: info.rs  mod.rs
src/character/__test__/: info_179.json  info_1907.json
src/common/: characters.rs  error.rs  forum.rs  mod.rs  news.rs  recommendations.rs  staff.rs  stats.rs  tag.rs  user_updates.rs
src/manga/: characters.rs  forum.rs  info.rs  mod.rs  more_info.rs  news.rs  pictures.rs  recommendations.rs  reviews.rs  stats.rs  test_helper.rs  user_updates.rs
src/manga/__test__/: characters_25.json  forum_13.json  forum_189.json  forum_25.json  info_13.json  info_25.json  more_info_13.json  news_13.json  news_25.json  pictures_13.json  pictures_189.json  pictures_25.json  recommendations_13.json  recommendations_25.json  reviews_13_page_1.json  stats_13.json  user_updates_189_page_1.json  user_updates_189_page_999.json  user_updates_25_page_1.json
src/person/: info.rs  mod.rs  pictures.rs  test_helper.rs
src/person/__test__/: info_167.json  info_1880.json  pictures_1880.json  pictures_33.json
src/utils/: httpc.rs  mod.rs  test_helper.rs
src/utils/__test__/: base_url.json
src/v3/: mod.rs
src/v3/anime/: characters_staff.rs  episodes.rs  forum.rs  info.rs  mod.rs  more_info.rs  news.rs  pictures.rs  recommendations.rs  reviews.rs  stats.rs  user_updates.rs  videos.rs
src/v3/anime/__test__/: characters_staff_136.json  characters_staff_20.json  episodes_20_page_1.json  episodes_20_page_999.json  episodes_4207_page_1.json  episodes_4207_page_999.json  forum_20.json  forum_4207.json  info_20.json  more_info_20.json  more_info_4207.json  news_136.json  pictures_136.json  (+11 more)
src/v3/character/: info.rs  mod.rs  test_helper.rs
src/v3/common/: characters.rs  forum.rs  mod.rs  news.rs  pictures.rs  recommendations.rs  request.rs  tag.rs  voice_actor.rs
src/v3/manga/: characters.rs  forum.rs  info.rs  mod.rs  more_info.rs  news.rs  pictures.rs  recommendations.rs  reviews.rs  stats.rs  user_updates.rs
src/v3/person/: info.rs  mod.rs  pictures.rs
src/v3/utils/: httpc.rs
(+20 files in other folders)
