[package]
authors = ["William Darian <williamdariansutedjo@gmail.com>"]
categories = ["api-bindings"]
edition = "2018"
name = "jikan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
derive-getters = "0.2.0"
hyper = {version = "0.14.7", features = ["full"]}
hyper-tls = "0.5.0"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1.5.0", features = ["full"]}

[dev-dependencies]
httpmock = "0.5.8"

[features]
default = ["anime", "manga"]

anime = []
manga = []
