[package]
authors = ["William Darian <williamdariansutedjo@gmail.com>"]
categories = ["api-bindings"]
edition = "2018"
keywords = ["my anime list", "mal", "anime", "manga"]
license-file = "LICENSE"
name = "jikan"
readme = "README.md"
version = "0.1.0"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
derive-getters = "0.2.0"
hyper = {version = "0.14.8", features = ["full"]}
hyper-tls = "0.5.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = {version = "1.6.1", features = ["full"]}
url = {version="2.2.2", features = ["serde"]}

[dev-dependencies]
cargo-husky = "1.5.0"
httpmock = "0.5.8"

[features]
default = ["anime", "manga", "person", "character"]

anime = []
manga = []
person = []
character = []
