[package]
authors = ["William Darian <williamdariansutedjo@gmail.com>"]
categories = ["api-bindings"]
edition = "2021"
keywords = ["my anime list", "mal", "anime", "manga"]
license-file = "LICENSE"
name = "jikan"
readme = "README.md"
version = "0.1.0"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
derive-getters = "0.2.0"
hyper = {version = "0.14.16", features = ["full"]}
hyper-tls = "0.5.0"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
thiserror = "1.0.30"
tokio = {version = "1.15.0", features = ["full"]}
url = {version="2.2.2", features = ["serde"]}

[dev-dependencies]
cargo-husky = "1.5.0"
httpmock = "0.6.6"

[features]
default = ["v4"]

v3 = ["anime_v3", "manga_v3", "person_v3", "character_v3"]
anime_v3 = []
manga_v3 = []
person_v3 = []
character_v3 = []

v4 = ["anime_v4"]
anime_v4 = []
